added text elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Web Development 101</title>
   </head>
   <body>
-    Web Development content here!
+    <h1>Web Development 101</h1>
+    <h2>Learn how to build websites</h2>
+    <ul>
+      <li>About</li>
+      <li>Gallery</li>
+    </ul>
   </body>
 </html>
