--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <li>About</li>
       <li>Gallery</li>
     </ul>
+    <img src="assets/image.jpg" width="500" height="300" alt="splash image" />
   </body>
 </html>
