added links to pages

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Web Development 101</h1>
     <h2>Learn how to build websites</h2>
     <ul>
-      <li>About</li>
-      <li>Gallery</li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
     </ul>
     <img src="assets/image.jpg" width="500" height="300" alt="splash image" />
   </body>
