--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
     <title>Web Development 101 - About</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
+      </nav>
+    </header>
     <h1>About</h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
