--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,12 @@
     <title>Web Development 101 - Gallery</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
+      </nav>
+    </header>
     <h1>Gallery</h1>
     <a href="/">back to home</a>
   </body>
