--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <title>Web Development 101</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
+      </nav>
+    </header>
     <h1>Web Development 101</h1>
     <h2>Learn how to build websites</h2>
-    <ul>
-      <li><a href="about.html">About</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-    </ul>
+
     <img src="assets/image.jpg" width="500" height="300" alt="splash image" />
   </body>
 </html>
