image text overlay

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
         <a href="gallery.html">Gallery</a>
       </nav>
     </header>
-    <h1>Web Development 101</h1>
-    <h2>Learn how to build websites</h2>
-
-    <img src="assets/image.jpg" width="500" height="300" alt="splash image" />
+    <div class="splash">
+      <img src="assets/image.jpg" alt="splash image" />
+      <div id="splash-text">
+        <h1>Web Development 101</h1>
+        <h2>Learn how to build websites</h2>
+      </div>
+    </div>
   </body>
 </html>
