--- a/about.html
+++ b/about.html
@@ -9,21 +9,26 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="about.html">About</a>
-        <a href="gallery.html">Gallery</a>
-      </nav>
+      <div class="content">
+        <nav>
+          <a href="about.html">About</a>
+          <a href="gallery.html">Gallery</a>
+        </nav>
+      </div>
     </header>
-    <h1>About</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.
-    </p>
-    <a href="/">back to home</a>
+    <div class="content">
+      <h1>About</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+
+      <a class="link" href="/">back to home</a>
+    </div>
   </body>
 </html>
