--- a/gallery.html
+++ b/gallery.html
@@ -9,12 +9,16 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="about.html">About</a>
-        <a href="gallery.html">Gallery</a>
-      </nav>
+      <div class="content">
+        <nav>
+          <a href="about.html">About</a>
+          <a href="gallery.html">Gallery</a>
+        </nav>
+      </div>
     </header>
-    <h1>Gallery</h1>
-    <a href="/">back to home</a>
+    <div class="content">
+      <h1>Gallery</h1>
+      <a class="link" href="/">back to home</a>
+    </div>
   </body>
 </html>
